--- a/Leaflet-Step-2/index.html
+++ b/Leaflet-Step-2/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Leaflet Step-1</title>
+  <title>Leaflet Step-2</title>
 
   <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -27,7 +27,7 @@
   <!-- D3 JavaScript -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <!-- Leaflet-Choropleth JavaScript -->
-  <script type="text/javascript" src="static/js/choropleth.js"></script>
+  <!-- <script type="text/javascript" src="static/js/choropleth.js"></script> -->
 
   <!-- API key -->
   <script type="text/javascript" src="static/js/config.js"></script>
