--- a/Leaflet-Step-2/index.html
+++ b/Leaflet-Step-2/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <!-- The div that holds our map -->
-  <div id="mapid"></div>
+  <div id="map"></div>
 
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
@@ -34,7 +34,7 @@
   <!-- Our JavaScript -->
   <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
   <!-- <script type="text/javascript" src="static/js/logic2.js"></script> -->
-  <script type="text/javascript" src="static/js/logic4.js"></script>
+  <script type="text/javascript" src="static/js/logic5.js"></script>
 
 
 
